feat: add license to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0-development",
   "description": "Logger for Apollo Link that uses a similar format to redux-logger. Includes performance information.",
   "author": "Adrian Perez adrian@adrianperez.org",
+  "license": "MIT",
   "module": "es/index.js",
   "main": "lib/index.js",
   "engines": {
