--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,14 @@ node_js:
   - '9'
   - '8'
   - '6'
+before_install: yarn global add greenkeeper-lockfile@1
+before_script: greenkeeper-lockfile-update
+after_script: greenkeeper-lockfile-upload
+install: yarn install --ignore-engines
 after_success:
   - npm run semantic-release
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
+env:
+  - GK_LOCK_YARN_OPTS: "--ignore-engines"
