chore: update contributor list

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,6 +27,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "gnerkus",
+      "name": "Ifeanyi Oraelosi",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/3065138?v=4",
+      "profile": "https://github.com/gnerkus",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
