fix: use default color for operationName
Fixes display of `operationName` for users of DevTools' dark theme.

Thanks to @romarioraffington for the idea.

Closes: #6

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,6 +36,16 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "romarioraffington",
+      "name": "Romario",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/7076981?v=4",
+      "profile": "https://github.com/romarioraffington",
+      "contributions": [
+        "bug",
+        "ideas"
+      ]
     }
   ]
 }
