--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -46,6 +46,16 @@
         "bug",
         "ideas"
       ]
+    },
+    {
+      "login": "Horoshiy",
+      "name": "Yuriy Kornienko",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/6183943?v=4",
+      "profile": "http://www.dinamchiki.ru",
+      "contributions": [
+        "code"
+      ]
     }
-  ]
+  ],
+  "repoType": "github"
 }
