feat: look through definitions to find an operation type
Previously we were just reporting the first, which for large queries was
often a fragment definition, which doesn't have an operation. In most
use cases, there will be exactly one query or mutation. In the case
where there are multiple, we'll report one of them (no worse than
before!). Also - correct spelling of "elapsed"

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -55,6 +55,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "amcvitty",
+      "name": "Andy McVitty",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/7907585?v=4",
+      "profile": "https://github.com/amcvitty",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "repoType": "github"
