feat: add support for apollo-link v3

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "es/index.js",
   "main": "lib/index.js",
   "engines": {
-    "node": "> 4",
+    "node": "> 10",
     "npm": "> 3"
   },
   "files": [
@@ -53,7 +53,8 @@
       "src/**/*.js",
       "!**/node_modules/**",
       "!**/vendor/**"
-    ]
+    ],
+    "testURL": "http://localhost"
   },
   "quokka": {
     "babel": true
@@ -70,7 +71,6 @@
     "commitizen": "^2.9.6",
     "cross-env": "^5.1.4",
     "eslint": "^5.0.0",
-    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^2.4.0",
     "eslint-plugin-fp": "^2.3.0",
@@ -86,7 +86,7 @@
     "travis-deploy-once": "^5.0.1"
   },
   "peerDependencies": {
-    "apollo-link": "^1.0.0"
+    "@apollo/client": "^3.0.0"
   },
   "repository": {
     "type": "git",
