--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -55,6 +55,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "dmt0",
+      "name": "Dmitry Shvedov",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/2717746?v=4",
+      "profile": "https://github.com/dmt0",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "repoType": "github"
