chore(package): update node version
BREAKING CHANGE: Support for Node < 10 removed.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "module": "es/index.js",
   "main": "lib/index.js",
   "engines": {
-    "node": "> 10",
+    "node": ">= 10",
     "npm": "> 3"
   },
   "files": [
